2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use Guile-BAUX for src/snuggle/*.h.

	* Makefile.am (EXTRA_DIST): Add snuggle.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Avoid ‘EVAL_STRING’.

	* libpq.c (pg_result_error_field): Use ‘NUM_INT’, ‘atoi’ instead.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Fix bug: Make ‘pg-result-error-field’ DTRT.

	* libpq.c (pg_result_error_field): Return the
	object created from non-‘NULL’ ‘PQresultErrorField’ rv!

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Don't bother w/ ‘lob_close’ rv.

	* libpq.c (lob_free): ...here.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘BSTRING’ more.

	* libpq.c (pg_escape_string_conn): ...here.

2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop procs: pg-{getline,getlineasync,putline,endcopy}

	* libpq.c (pg_getline, pg_getlineasync, pg_putline)
	(pg_endcopy): Delete PRIMPROCs.

2013-03-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.46 (tag v0.46)

2013-03-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq doc] Add "WILL BE REMOVED" to some docstrings; update others.

	These four should all go at the same time.

	* libpq.c (pg_getline, pg_getlineasync): Move
	planned retirement date back to 2013-12-31 in docstring.
	(pg_putline, pg_endcopy): Mention planned retirement in docstring.

2013-03-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Fix bug: Don't presume backup env var for all connection options.

	PostgreSQL 9.1 no longer supports a backup env var for every
	connection option.  This results in a segfault under NetBSD.
	Reported by Greg Troxel.

	* libpq.c (pg_conndefaults): Use ‘#f’ for options w/o ‘envvar’.

2013-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.45 (tag v0.45)

2012-12-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Avoid overlarge ‘char-set:full’.

	* postgres-qcons.scm: Import SRFI 14 ‘ucs-range->char-set’.
	(string-xrep): If ‘char-set:full’ has more than 256 elements.